Added basic css an dhtnk files

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
-<<<<<<< Updated upstream
 <!DOCTYPE html>
 <html>
+
+<head>
+<!-- Import Raleway font from Google Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    
+<!-- CSS Files -->
+<link href="home.css" rel="stylesheet" type="text/css" />
+</head>
+
 <body>
 
 <h1>My First Heading</h1>
@@ -8,14 +18,3 @@
 
 </body>
 </html>
-=======
-<!DOCTYPE html>
-<html>
-<body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
-</html>
->>>>>>> Stashed changes
