--- a/index.html
+++ b/index.html
@@ -6,15 +6,29 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    
-<!-- CSS Files -->
 <link href="home.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<!-- //////////////////////// Intro Section ////////////////////////////////// -->
+<h1 class="head1"> Hello, I'm Nkechi :)</h2>
+    <p class="pronunciation"> Pronounced Een- Kay- Chee  </p>
+    <section class="bio1">
+       <div> 
+         <p class="BioPara">  I am an incoming freshman at UC Berkeley as a Computer Science Major and hopefully policy minor. </p>
+      </div>
+   </section>
+ 
+   <!-- ///////////  KWK Journey //////////////////////////////////////////////// -->  
+ <section class= "Kwk1">
+    <div> 
+        <p class="KwkPara"> Kode with Klossy was one of my first introductions to the world of coding, as I am a former WebDev and Data Science Scholar. I loved learning to code in a supportive environment, and I have continued to practice ever since. The skills I learned from this program especially fueled my desire to explore the intersections of tech and policy as a means to alleviate racial inequities, which is why I am excited to be a part of the 2025 KWK x BWDC Storytelling Challenge!
+        </p>
+     </div>
+ </section>
+   
+  
 
 </body>
 </html>
