--- a/index.html
+++ b/index.html
@@ -10,15 +10,32 @@
 </head>
 
 <body>
+<!-- //////////////////////////PARALLAX SCROLLING///////////////////////-->
 
+<style>
+    .parallax {
+      /* The image used */
+      background-image: url("logo.png");
+  
+      /* Set a specific height */
+      min-height: 800px;
+  
+      /* Create the parallax scrolling effect */
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+    </style>
+    
 <!-- //////////////////////// Intro Section ////////////////////////////////// -->
 <h1 class="head1"> Hello, I'm Nkechi :)</h2>
-    <p class="pronunciation"> Pronounced Een- Kay- Chee  </p>
-    <section class="bio1">
+    <p class="pronunciation"> /Een-Kay- Chee/  </p>
+<section class="bio1">
        <div> 
          <p class="BioPara">  I am an incoming freshman at UC Berkeley as a Computer Science Major and hopefully policy minor. </p>
       </div>
-   </section>
+</section>
  
    <!-- ///////////  KWK Journey //////////////////////////////////////////////// -->  
  <section class= "Kwk1">
