--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <style>
     .parallax {
       /* The image used */
-      background-image: url("logo.png");
+      background-image: url("/Users/nkechi7/Documents/GitHub/kechi7.github.io/Imageslogo.png");
   
       /* Set a specific height */
       min-height: 800px;
@@ -25,12 +25,16 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+      background-color: black;
     }
-    </style>
-    
+</style>
+<div class="parallax"></div>
+
 <!-- //////////////////////// Intro Section ////////////////////////////////// -->
 <h1 class="head1"> Hello, I'm Nkechi :)</h2>
-    <p class="pronunciation"> /Een-Kay- Chee/  </p>
+<div class="typewriter">
+    <p class="pronunciation"> /Een-Kay- Chee/ </p>
+</div>
 <section class="bio1">
        <div> 
          <p class="BioPara">  I am an incoming freshman at UC Berkeley as a Computer Science Major and hopefully policy minor. </p>
