--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
 <div class="parallax"></div>
 
 <!-- //////////////////////// Intro Section ////////////////////////////////// -->
+<section class= name1>
 <h1 class="head1"> Hello, I'm Nkechi :)</h2>
+</section>
+
+<section class = type1>
 <div class="typewriter">
-    <p class="pronunciation"> /Een-Kay- Chee/ </p>
+    <h1> /een-kay-chee/ </h1>
 </div>
+</section>
+
 <section class="bio1">
        <div> 
          <p class="BioPara">  I am an incoming freshman at UC Berkeley as a Computer Science Major and hopefully policy minor. </p>
