--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <style>
     .parallax {
     /* The image used */
-    background-image: url("/Users/nkechi7/Documents/GitHub/kechi7.github.io/purpleTrainGif.gif");
+    background-image: url("purpleTrainGif.gif");
 
     /* Set a specific height */
     /* min-height: 400px; */
